# fullstack-ai-elective-platform

./: .gitignore
asset-processing-service-ai/: .gitignore  Dockerfile  README.md  courses.json  pyproject.toml
asset-processing-service-ai/asset_processing_service_ai/: main.py
nextjs/: package-lock.json  package.json
nextjs/.next/: app-build-manifest.json  trace
nextjs/.next/cache/: .rscinfo
nextjs/.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
nextjs/.next/server/app/: page.js  page_client-reference-manifest.js
nextjs/.next/server/app/(landing)/: page.js  page_client-reference-manifest.js
nextjs/.next/server/chunks/: [root of the server]__ddb12edd._.js.map  node_modules_next_18418dbe._.js.map
nextjs/.next/static/chunks/: [root of the server]__3a40d6d2._.js  [root of the server]__3a40d6d2._.js.map  [root of the server]__73499ecc._.js  [root of the server]__73499ecc._.js.map  [root of the server]__98144f0b._.css  [root of the server]__98144f0b._.css.map  _b17aa9f1._.js  _b17aa9f1._.js.map  _eeaac999._.js  _eeaac999._.js.map  app_(landing)_page_tsx_b741fd61._.js  app_globals_b52d8e88.css  app_globals_b52d8e88.css.map  app_page_tsx_b741fd61._.js  node_modules_69e050bc._.js.map  node_modules_@swc_helpers_cjs_00636ac3._.js.map  node_modules_a2bbd875._.js.map  node_modules_next_dist_1a6ee436._.js.map  node_modules_next_dist_3bfaed20._.js.map  node_modules_next_dist_client_43e3ffb8._.js  node_modules_next_dist_client_43e3ffb8._.js.map  node_modules_next_dist_compiled_2ce9398a._.js.map  node_modules_next_dist_ea69acce._.js.map  node_modules_react-dom_cjs_react-dom_development_ab7e073c.js.map  node_modules_react-dom_f14d0471._.js.map  node_modules_react_b2385d85._.js.map
nextjs/.vercel/: project.json
nextjs/app/: page.tsx
nextjs/app/(dashboard)/: layout.tsx
nextjs/app/(dashboard)/projects/: page.tsx
nextjs/app/(dashboard)/settings/: loading.tsx  page.tsx
nextjs/app/(dashboard)/templates/: loading.tsx
nextjs/app/(landing)/: page.tsx
(+118 files in other folders)
