#pyproject.toml
[tool.poetry]
name = "asset-processing-service-ai"
version = "0.1.0"
description = ""
authors = ["Devilfish281 <Dobley@csu.fullerton.edu>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "asset_processing_service_ai"  # This tells Poetry where to find the package

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.0"
pydantic = "^2.11.0"

[tool.poetry.scripts]  
asset-processing-service-ai = "asset_processing_service_ai.main:main"  


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
