#pyproject.toml
[tool.poetry]
name = "asset-processing-service-ai"
version = "0.1.0"
description = ""
authors = ["Devilfish281 <Dobley@csu.fullerton.edu>"]
readme = "README.md"

[[tool.poetry.packages]]
include = "asset_processing_service_ai"  # This tells Poetry where to find the package

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standard"], version = "^0.37.0"}
pydantic = "^2.11.0"
python-dotenv = "^1.1.1"
langchain = "^0.3.27"
langchain-openai = "^0.3.34"

[tool.poetry.scripts]  
asset-processing-service-ai = "asset_processing_service_ai.main:main"  


[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"



[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
httpx = "^0.28.1"
pytest-asyncio = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
